# atticus-mpps

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BLOCKER_CLOSURE_MATRIX.md  GOVERNANCE_NOTE.md  LOCAL_RUN_CHECKLIST.md  PACKET_CONTRACT.md  REPLAY_SPEC.md  ROADMAP.md  SPRINT_V0_1_SMOKE_TEST.md  V0_OPERATING_CONCEPT.md
schemas/: derived_candidate.schema.json  raw_observation.schema.json
src/mpps/: __init__.py
src/mpps/cli/: main.py
src/mpps/dashboard/: __init__.py  cli_status.py
src/mpps/ingest/: __init__.py  image_loader.py
src/mpps/packet/: __init__.py  envelope.py  hashes.py  ids.py  validator.py  writer.py
src/mpps/replay/: __init__.py  replay_runner.py
src/mpps/vision/: __init__.py  sky_cloud_baseline.py
tests/: test_candidate_parentage.py  test_hashes.py  test_packet_validation.py  test_review_state.py
