[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atticus-mpps"
version = "0.1.0"
description = "ATTICUS MPPS desktop prototype: auditable multi-band environmental perception packet spine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.22.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
mpps = "mpps.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
